Added white pawn movement
1 step forward
2 step forward if on starting possition
diagonally attacks

Displaying possible moves and attacks on hexboard

TODO: Promotion, refactor pawn logic to separate function

--- a/html/board.html
+++ b/html/board.html
@@ -159,4 +159,5 @@
     </div>
 </body>
 <script src="../js/startingPosition.js"></script>
+<script src="../js/pieceMovement/pieceMovement.js"></script>
 </html>
