--- a/html/board.html
+++ b/html/board.html
@@ -159,5 +159,5 @@
     </div>
 </body>
 <script src="../js/startingPosition.js"></script>
-<script src="../js/pieceMovement/pieceMovement.js"></script>
+<script type="module" src="../js/pieceMovement/pieceMovement.js"></script>
 </html>
