--- a/html/board.html
+++ b/html/board.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hexagonal Chess</title>
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/myModal.css">
+    <link rel="stylesheet" href="../css/selectionGrid.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body class="bg-dark">
@@ -16,7 +18,7 @@
                         <div class="mb-md-5 mt-md-4 pb-5">
                             <h2 class="fw-bold mb-2 text-uppercase">Main</h2>
                             <p class="text-white-50 mb-5 user-data">This is my user data</p>
-                            <div id="hexboard" class="hexboard">
+                            <div id="hexboard" class="hexboard"> <!--huuuuuuuuge pice of... board-->
                                 <div class="hexagon dissabled" id="1"></div>
                                 <div class="hexagon dissabled" id="2"></div>
                                 <div class="hexagon dissabled" id="3"></div>
@@ -149,7 +151,7 @@
                                 <div class="hexagon dissabled" id="130"></div>
                                 <div class="hexagon dissabled" id="131"></div>
                                 <div class="hexagon dissabled" id="132"></div>
-                            </div>                            
+                            </div>
                             <p class="text-white-50 mb-5 user-data">This is my 2nd user data</p>
                         </div>
                     </div>
@@ -157,7 +159,27 @@
             </div>
         </div>
     </div>
+    <div class="myModal">
+        <div class="myModal-content">
+            <span class="myClose" onclick="CloseModal()">&times;</span>
+            <div class="text-center">
+                <p>Select promotion</p>
+                <div class="SelectionGrid">
+                    <div class="ImageForSelection">
+                    </div>
+                    <div class="ImageForSelection">
+                    </div>
+                    <div class="ImageForSelection">
+                    </div>
+                    <div class="ImageForSelection">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>  
 </body>
 <script src="../js/startingPosition.js"></script>
+<script src="../js/promotionModalController.js"></script>
+<script src="../js/SiteHexGraber.js"></script>
 <script type="module" src="../js/pieceMovement/pieceMovement.js"></script>
 </html>
