Closing button deleted
-closing button was deleted
-new display: none logic was added
-comments from w3 were deleted

--- a/html/board.html
+++ b/html/board.html
@@ -161,17 +161,16 @@
     </div>
     <div class="myModal">
         <div class="myModal-content">
-            <span class="myClose" onclick="CloseModal()">&times;</span>
             <div class="text-center">
                 <p>Select promotion</p>
                 <div class="SelectionGrid">
-                    <div class="ImageForSelection">
+                    <div class="ImageForSelection" onclick="PiecePromotionChoosed(this.firstElementChild)">
                     </div>
-                    <div class="ImageForSelection">
+                    <div class="ImageForSelection" onclick="PiecePromotionChoosed(this.firstElementChild)">
                     </div>
-                    <div class="ImageForSelection">
+                    <div class="ImageForSelection" onclick="PiecePromotionChoosed(this.firstElementChild)">
                     </div>
-                    <div class="ImageForSelection">
+                    <div class="ImageForSelection" onclick="PiecePromotionChoosed(this.firstElementChild)">
                     </div>
                 </div>
             </div>
