Added pawn promotion check
- Fixed minor errors while calling promotion functions

TODO: PromotePiece();

--- a/html/board.html
+++ b/html/board.html
@@ -178,7 +178,7 @@
     </div>  
 </body>
 <script src="../js/startingPosition.js"></script>
-<script src="../js/promotionModalController.js"></script>
-<script src="../js/SiteHexGraber.js"></script>
+<script type="module" src="../js/promotionModalController.js"></script>
+<script src="../js/SiteContentGraber.js"></script>
 <script type="module" src="../js/pieceMovement/pieceMovement.js"></script>
 </html>
