--- a/html/board.html
+++ b/html/board.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pl">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,12 +8,16 @@
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/myModal.css">
     <link rel="stylesheet" href="../css/selectionGrid.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
+
 <body class="bg-dark">
-    <div class="container py-5 h-100">
-        <div class="row d-flex justify-content-center align-items-center h-100">
-            <div class="col-12 col-md-9 col-lg-6 col-xl-6">
+    <div class="container-fluid p-4">
+        <div class="row">
+            <div class="col-2"></div>
+            <div class="col-1"></div>
+            <div class="col-6">
                 <div class="card bg-dark text-white" style="border-radius: 1rem;">
                     <div class="card-body p-5 text-center">
                         <div class="mb-md-5 mt-md-4 pb-5">
@@ -157,6 +162,25 @@
                     </div>
                 </div>
             </div>
+            <div class="col-1"></div>
+            <div class="col-2">
+                <div class="sidebar">
+                    <div id="timmers">
+                        <div class="row roundedCorners bg-dark p-3 w-80 mx-auto">
+                            <div class="col timer">
+                                <span class="fw-bold">White</span>
+                                <span id="playerWhiteTimer">5:31</span>
+                            </div>
+                        </div>
+                        <div class="row roundedCorners bg-dark p-3 w-80 mx-auto">
+                            <div class="col timer">
+                                <span class="fw-bold">Black</span>
+                                <span id="playerBlackTimer">6:42</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <div class="myModal">
@@ -175,10 +199,11 @@
                 </div>
             </div>
         </div>
-    </div>  
+    </div>
 </body>
 <script src="../js/startingPosition.js"></script>
 <script type="module" src="../js/promotionModalController.js"></script>
 <script src="../js/SiteContentGraber.js"></script>
 <script type="module" src="../js/pieceMovement/pieceMovement.js"></script>
+
 </html>
