--- a/html/board.html
+++ b/html/board.html
@@ -179,6 +179,63 @@
                             </div>
                         </div>
                     </div>
+                    <div class="grid roundedCorners bg-dark" id="movesHistory">
+                        <div class="row"> <!--mock element-->
+                            <div class="col-2">1.</div>
+                            <div class="col-5">Nc6</div>
+                            <div class="col-5">xg4</div>
+                        </div>
+                        <div class="row"> <!--mock element-->
+                            <div class="col-2">2.</div>
+                            <div class="col-5">Nc6</div>
+                            <div class="col-5">xg4</div>
+                        </div>
+                        <div class="row"> <!--mock element-->
+                            <div class="col-2">3.</div>
+                            <div class="col-5">Nc6</div>
+                            <div class="col-5">xg4</div>
+                        </div>
+                        <div class="row"> <!--mock element-->
+                            <div class="col-2">3.</div>
+                            <div class="col-5">Nc6</div>
+                            <div class="col-5">xg4</div>
+                        </div>
+                        <div class="row"> <!--mock element-->
+                            <div class="col-2">3.</div>
+                            <div class="col-5">Nc6</div>
+                            <div class="col-5">xg4</div>
+                        </div>
+                        <div class="row"> <!--mock element-->
+                            <div class="col-2">3.</div>
+                            <div class="col-5">Nc6</div>
+                            <div class="col-5">xg4</div>
+                        </div>
+                        <div class="row"> <!--mock element-->
+                            <div class="col-2">3.</div>
+                            <div class="col-5">Nc6</div>
+                            <div class="col-5">xg4</div>
+                        </div>
+                        <div class="row"> <!--mock element-->
+                            <div class="col-2">3.</div>
+                            <div class="col-5">Nc6</div>
+                            <div class="col-5">xg4</div>
+                        </div>
+                        <div class="row"> <!--mock element-->
+                            <div class="col-2">3.</div>
+                            <div class="col-5">Nc6</div>
+                            <div class="col-5">xg4</div>
+                        </div>
+                        <div class="row"> <!--mock element-->
+                            <div class="col-2">3.</div>
+                            <div class="col-5">Nc6</div>
+                            <div class="col-5">xg4</div>
+                        </div>
+                        <div class="row"> <!--mock element-->
+                            <div class="col-2">3.</div>
+                            <div class="col-5">Nc6</div>
+                            <div class="col-5">xg4</div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
