--- a/html/board.html
+++ b/html/board.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hexagonal Chess</title>
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/myModal.css">
+    <link rel="stylesheet" href="../css/board/myModal.css">
     <link rel="stylesheet" href="../css/selectionGrid.css">
+    <link rel="stylesheet" href="../css/board/hexboardStyle.css">
+    <link rel="stylesheet" href="../css/board/sidebarStyle.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -18,8 +20,8 @@
             <div class="col-2"></div>
             <div class="col-1"></div>
             <div class="col-6">
-                <div class="card bg-dark text-white" style="border-radius: 1rem;">
-                    <div class="card-body p-5 text-center">
+                <div class="mainVisualElement">
+                    <div class="card-body text-center">
                         <div class="mb-md-5 mt-md-4 pb-5">
                             <h2 class="fw-bold mb-2 text-uppercase">Main</h2>
                             <p class="text-white-50 mb-5 user-data">This is my user data</p>
@@ -164,16 +166,16 @@
             </div>
             <div class="col-1"></div>
             <div class="col-2">
-                <div class="sidebar">
+                <div class="mainVisualElement sidebar">
                     <div id="timmers">
                         <div class="row roundedCorners bg-dark p-3 w-80 mx-auto">
-                            <div class="col timer">
+                            <div class="col text-center">
                                 <span class="fw-bold">White</span>
                                 <span id="playerWhiteTimer">5:31</span>
                             </div>
                         </div>
                         <div class="row roundedCorners bg-dark p-3 w-80 mx-auto">
-                            <div class="col timer">
+                            <div class="col text-center">
                                 <span class="fw-bold">Black</span>
                                 <span id="playerBlackTimer">6:42</span>
                             </div>
