added chat visual
-added chat visual

--- a/html/board.html
+++ b/html/board.html
@@ -238,6 +238,13 @@
                             <div class="col-5">xg4</div>
                         </div>
                     </div>
+                    <div class="roundedCorners bg-dark" id="chat">
+
+                    </div>
+                    <div class="roundedCorners row bg-dark" id="chatElement">
+                        <input class="col-8" id="chatInput">
+                        <button class="col-4" id="chatEntryButton">SEND</button>
+                    </div>
                 </div>
             </div>
         </div>
