added sidebar positions
-added sidebar positions

--- a/html/homePage.html
+++ b/html/homePage.html
@@ -10,7 +10,12 @@
 <body class="bg-dark">
     <div class="p-4">
         <div class="panel-left ">
-            <div id="sidebar" class="mainVisualElement p-4"></div>
+            <div id="sidebar" class="mainVisualElement p-4 text-white">
+                <div>Home</div>
+                <div>Play</div>
+                <div>Match history</div>
+                <div>Credits</div>
+            </div>
         </div>
         <div class="panel-right text-white">
             <div id="" class="mainVisualElement">
