--- a/html/homePage.html
+++ b/html/homePage.html
@@ -2,7 +2,7 @@
 
 <head>
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/homePage/sidebar.css">
+    <link rel="stylesheet" href="../css/homePage/homePage.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -30,8 +30,11 @@
                 </div>
             </div>
             <div class="mainVisualElement">
+                <p style="font-size: 24px;">Last games</p>
+                <div style="font-size: 16px; color: gray; font-style: italic;">no last matches</div>
+            </div>
+            <div class="mainVisualElement">
                 <div>
-                    <!-- Add some content to make the page scrollable -->
                     <p>Content section 1</p>
                     <p>More content...</p>
                     <p>Content section 2</p>
