added page redirections on click
added page redirections on click

--- a/html/homePage.html
+++ b/html/homePage.html
@@ -11,10 +11,10 @@
     <div class="p-4">
         <div class="panel-left ">
             <div id="sidebar" class="mainVisualElement p-4 text-white">
-                <div>Home</div>
-                <div>Play</div>
-                <div>Match history</div>
-                <div>Credits</div>
+                <div onclick="window.location.href='homePage.html'">Home</div>
+                <div onclick="window.location.href='playPage.html'">Play</div>
+                <div onclick="window.location.href='matchHistoryPage.html'">Match history</div>
+                <div onclick="window.location.href='creditsPage.html'">Credits</div>
             </div>
         </div>
         <div class="panel-right text-white">
