--- a/html/homePage.html
+++ b/html/homePage.html
@@ -2,13 +2,16 @@
 
 <head>
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/homePage/homeWebsite.css">
     <link rel="stylesheet" href="../css/homePage/homePage.css">
+    <link rel="stylesheet" href="../css/homePage/sidePanel.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
 <body class="bg-dark">
     <div class="p-4">
+        <!-- side panel -->
         <div class="panel-left ">
             <div id="sidebar" class="mainVisualElement p-4 text-white">
                 <div onclick="window.location.href='homePage.html'">Home</div>
@@ -17,6 +20,7 @@
                 <div onclick="window.location.href='creditsPage.html'">Credits</div>
             </div>
         </div>
+        <!-- home page -->
         <div class="panel-right text-white">
             <div id="" class="mainVisualElement">
                 <div class="playerInfoRow">
@@ -47,6 +51,7 @@
                 </div>
             </div>
         </div>
+
     </div>
 </body>
 
