--- a/html/homePage.html
+++ b/html/homePage.html
@@ -3,8 +3,9 @@
 <head>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/homePage/homeWebsite.css">
-    <link rel="stylesheet" href="../css/homePage/homePage.css">
     <link rel="stylesheet" href="../css/homePage/sidePanel.css">
+    <link rel="stylesheet" href="../css/homePage/homePage.css">
+    <link rel="stylesheet" href="../css/homePage/playPage.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -14,45 +15,98 @@
         <!-- side panel -->
         <div class="panel-left ">
             <div id="sidebar" class="mainVisualElement p-4 text-white">
-                <div onclick="window.location.href='homePage.html'">Home</div>
-                <div onclick="window.location.href='playPage.html'">Play</div>
+                <div onclick="SwitchPages('homePage')">Home</div>
+                <div onclick="SwitchPages('playPage')">Play</div>
                 <div onclick="window.location.href='matchHistoryPage.html'">Match history</div>
                 <div onclick="window.location.href='creditsPage.html'">Credits</div>
             </div>
         </div>
         <!-- home page -->
         <div class="panel-right text-white">
-            <div id="" class="mainVisualElement">
-                <div class="playerInfoRow">
-                    <img src="../art/user_portrait.png" id="playerIcon">
-                    <div id="playerNick">Nick</div>
+            <div id="homePage">
+                <div class="mainVisualElement">
+                    <div class="playerInfoRow">
+                        <img src="../art/user_portrait.png" id="playerIcon">
+                        <div id="playerNick">Nick</div>
+                    </div>
+                    <div class="playerInfoRow">
+                        <div id="playersNote">
+                            my random notemy random notemy random notemy random notemy random notemy random notemy
+                            random notemy random notemy random notemy random notemy random notemy random note
+                        </div>
+                    </div>
                 </div>
-                <div class="playerInfoRow">
-                    <div id="playersNote">
-                        my random notemy random notemy random notemy random notemy random notemy random notemy random notemy random notemy random notemy random notemy random notemy random note
+                <div class="mainVisualElement">
+                    <p style="font-size: 24px;">Last games</p>
+                    <div style="font-size: 16px; color: gray; font-style: italic;">no last matches</div>
+                </div>
+                <div class="mainVisualElement">
+                    <div>
+                        <p>Content section 1</p>
+                        <p>More content...</p>
+                        <p>Content section 2</p>
+                        <p>More content...</p>
+                        <p>Even more content...</p>
+                        <p>Keep scrolling...</p>
+                        <p>Almost there...</p>
+                        <p>More and more content...</p>
+                        <p>End of the page!</p>
                     </div>
                 </div>
             </div>
-            <div class="mainVisualElement">
-                <p style="font-size: 24px;">Last games</p>
-                <div style="font-size: 16px; color: gray; font-style: italic;">no last matches</div>
-            </div>
-            <div class="mainVisualElement">
-                <div>
-                    <p>Content section 1</p>
-                    <p>More content...</p>
-                    <p>Content section 2</p>
-                    <p>More content...</p>
-                    <p>Even more content...</p>
-                    <p>Keep scrolling...</p>
-                    <p>Almost there...</p>
-                    <p>More and more content...</p>
-                    <p>End of the page!</p>
+            <div id="playPage">
+                <div id="playMainPanel" class="mainVisualElement">
+                    <div class="row p-4">
+                        <div class="col-6 p-4">
+                            <div class="mainVisualElement gameMode">
+                                <img src="../art/hexchessBoard-image.png" class="imageFitter">
+                                <p>Single player</p>
+                            </div>
+                        </div>
+                        <div class="col-6 p-4">
+                            <div class="mainVisualElement gameMode">
+                                <img src="../art/hexchessBoard-image.png" class="imageFitter">
+                                <p>Multiplayer</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div id="friendListPanel">
+                    <div id="sidebar-friend" class="mainVisualElement">
+                        <div id="friendListScrollable">
+                            <!-- mock -->
+                            <div class="friend roundedCorners">
+                                <img src="../art/user_portrait.png">
+                                <div>Friend's Nick</div>
+                            </div>
+                            <!-- mock -->
+                            <div class="friend roundedCorners">
+                                <img src="../art/user_portrait.png">
+                                <div>Friend's Nick</div>
+                            </div>
+                            <!-- mock -->
+                            <div class="friend roundedCorners">
+                                <img src="../art/user_portrait.png">
+                                <div>Friend's Nick</div>
+                            </div>
+                            <!-- mock -->
+                            <div class="friend roundedCorners">
+                                <img src="../art/user_portrait.png">
+                                <div>Friend's Nick</div>
+                            </div>
+                            <!-- mock -->
+                            <div class="friend roundedCorners">
+                                <img src="../art/user_portrait.png">
+                                <div>Friend's Nick</div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
 
     </div>
 </body>
+<script src="../js/homePage/pageSwitch.js"></script>
 
 </html>
