Added page switching animation
-added page switching animation in JS
-added needed css classes for animation support

--- a/html/homePage.html
+++ b/html/homePage.html
@@ -23,7 +23,7 @@
         </div>
         <!-- home page -->
         <div class="panel-right text-white">
-            <div id="homePage">
+            <div id="homePage" class="fadingTransition" style="position: fixed;">
                 <div class="mainVisualElement">
                     <div class="playerInfoRow">
                         <img src="../art/user_portrait.png" id="playerIcon">
@@ -54,7 +54,7 @@
                     </div>
                 </div>
             </div>
-            <div id="playPage">
+            <div id="playPage" class="fadingTransition" style="position: fixed;">
                 <div id="playMainPanel" class="mainVisualElement">
                     <div class="row p-4">
                         <div class="col-6 p-4">
