--- a/html/homePage.html
+++ b/html/homePage.html
@@ -23,7 +23,7 @@
         </div>
         <!-- home page -->
         <div class="panel-right text-white">
-            <div id="homePage" class="fadingTransition" style="position: fixed;">
+            <div id="homePage" class="fadingTransition fixedElementClass">
                 <div class="mainVisualElement">
                     <div class="playerInfoRow">
                         <img src="../art/user_portrait.png" id="playerIcon">
@@ -54,7 +54,7 @@
                     </div>
                 </div>
             </div>
-            <div id="playPage" class="fadingTransition" style="position: fixed;">
+            <div id="playPage" class="fadingTransition fixedElementClass">
                 <div id="playMainPanel" class="mainVisualElement">
                     <div class="row p-4">
                         <div class="col-6 p-4">
@@ -71,7 +71,7 @@
                         </div>
                     </div>
                 </div>
-                <div id="friendListPanel">
+                <div id="friendListPanel" class="fixedElementClass fadingTransition">
                     <div id="sidebar-friend" class="mainVisualElement">
                         <div id="friendListScrollable">
                             <!-- mock -->
