--- a/html/homePage.html
+++ b/html/homePage.html
@@ -113,11 +113,11 @@
                                 <a href="https://www.vecteezy.com/free-videos/chess">Chess Stock Videos by Vecteezy</a>
                             </div>
                             <div class="creditsSection-assets hyperlinkStyle">
-                                <a href="">vecteezy_chess-bishop-particles-cinematic</a>
+                                <a href="../art/backgroundVideos/vecteezy_chess-bishop-particles-cinematic-background-video-hd-free_4475284.mp4">vecteezy_chess-bishop-particles-cinematic</a>
                                 <br/>
-                                <a href="">vecteezy_chess-rook-particles-cinematic</a>
+                                <a href="../art/backgroundVideos/vecteezy_rook-chess-strategy-game-cinematic-particles-motion_4475279.mp4">vecteezy_chess-rook-particles-cinematic</a>
                                 <br/>
-                                <a href="">vecteezy_chess-knight-particles-cinematic</a>
+                                <a href="../art/backgroundVideos/vecteezy_chess-knight-particles-cinematic-background-video_6435547.mp4">vecteezy_chess-knight-particles-cinematic</a>
                             </div>
                         </div>
                         <div class="creditsSection">
@@ -125,9 +125,9 @@
                                 <a href="http://www.freepik.com/">Designed by Freepik</a>
                             </div>
                             <div class="creditsSection-assets hyperlinkStyle">
-                                <a href="">pause_icon</a>
+                                <a href="../art/pause_icon_color.png">pause_icon</a>
                                 <br/>
-                                <a href="">play_icon</a>
+                                <a href="../art/play_icon_color.png">play_icon</a>
                             </div>
                         </div>
                     </div>
