--- a/html/homePage.html
+++ b/html/homePage.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="../css/homePage/homeWebsite.css">
     <link rel="stylesheet" href="../css/homePage/sidePanel.css">
     <link rel="stylesheet" href="../css/homePage/creditsPage.css">
+    <link rel="stylesheet" href="../css/homePage/popup.css">
     <link rel="stylesheet" href="../css/homePage/homePage.css">
     <link rel="stylesheet" href="../css/homePage/playPage.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -59,13 +60,13 @@
                 <div id="playMainPanel" class="mainVisualElement">
                     <div class="row p-4">
                         <div class="col-6 p-4">
-                            <div class="mainVisualElement gameMode">
+                            <div class="mainVisualElement gameMode" onclick="OpenGameModesModal('gameModeMenu')">
                                 <img src="../art/hexchessBoard-image.png" class="imageFitter">
                                 <p>Single player</p>
                             </div>
                         </div>
                         <div class="col-6 p-4">
-                            <div class="mainVisualElement gameMode">
+                            <div class="mainVisualElement gameMode" onclick="OpenGameModesModal('gameModeMenu')">
                                 <img src="../art/hexchessBoard-image.png" class="imageFitter">
                                 <p>Multiplayer</p>
                             </div>
@@ -113,11 +114,14 @@
                                 <a href="https://www.vecteezy.com/free-videos/chess">Chess Stock Videos by Vecteezy</a>
                             </div>
                             <div class="creditsSection-assets hyperlinkStyle">
-                                <a href="../art/backgroundVideos/vecteezy_chess-bishop-particles-cinematic-background-video-hd-free_4475284.mp4">vecteezy_chess-bishop-particles-cinematic</a>
-                                <br/>
-                                <a href="../art/backgroundVideos/vecteezy_rook-chess-strategy-game-cinematic-particles-motion_4475279.mp4">vecteezy_chess-rook-particles-cinematic</a>
-                                <br/>
-                                <a href="../art/backgroundVideos/vecteezy_chess-knight-particles-cinematic-background-video_6435547.mp4">vecteezy_chess-knight-particles-cinematic</a>
+                                <a
+                                    href="../art/backgroundVideos/vecteezy_chess-bishop-particles-cinematic-background-video-hd-free_4475284.mp4">vecteezy_chess-bishop-particles-cinematic</a>
+                                <br />
+                                <a
+                                    href="../art/backgroundVideos/vecteezy_rook-chess-strategy-game-cinematic-particles-motion_4475279.mp4">vecteezy_chess-rook-particles-cinematic</a>
+                                <br />
+                                <a
+                                    href="../art/backgroundVideos/vecteezy_chess-knight-particles-cinematic-background-video_6435547.mp4">vecteezy_chess-knight-particles-cinematic</a>
                             </div>
                         </div>
                         <div class="creditsSection">
@@ -126,7 +130,7 @@
                             </div>
                             <div class="creditsSection-assets hyperlinkStyle">
                                 <a href="../art/pause_icon_color.png">pause_icon</a>
-                                <br/>
+                                <br />
                                 <a href="../art/play_icon_color.png">play_icon</a>
                             </div>
                         </div>
@@ -136,7 +140,22 @@
         </div>
 
     </div>
+    <div id="gameModeMenu" class="popup mainVisualElement fadingTransition">
+        <button id="closeButton" class="roundedCorners contentText" onclick="CloseGameModesModal('gameModeMenu')">X</button>
+        <div id="contentFitter">
+            <div class="box mainVisualElement">1 min.</div>
+            <div class="box mainVisualElement">1 | 1</div>
+            <div class="box mainVisualElement">2 | 1</div>
+            <div class="box mainVisualElement">3 min.</div>
+            <div class="box mainVisualElement">3 | 2</div>
+            <div class="box mainVisualElement">5 min.</div>
+            <div class="box mainVisualElement">10 min.</div>
+            <div class="box mainVisualElement">15 | 10</div>
+            <div class="box mainVisualElement">30 min.</div>
+        </div>
+    </div>
 </body>
 <script src="../js/homePage/pageSwitch.js"></script>
+<script src="../js/homePage/gameModalController.js"></script>
 
 </html>
