fixed gameMode selection layout
-game mods in selection window now are always square shaped

--- a/html/homePage.html
+++ b/html/homePage.html
@@ -131,7 +131,7 @@
                             <div class="creditsSection-assets hyperlinkStyle">
                                 <a href="../art/pause_icon_color.png">pause_icon</a>
                                 <br />
-                                <a href="../art/play_icon_color.png">play_icon</a>
+                                <a href="../art/play_icon_color.png">play_icon</a>s
                             </div>
                         </div>
                     </div>
@@ -141,17 +141,17 @@
 
     </div>
     <div id="gameModeMenu" class="popup mainVisualElement fadingTransition">
-        <button id="closeButton" class="roundedCorners contentText" onclick="CloseGameModesModal('gameModeMenu')">X</button>
+        <button id="closeButton" class="roundedCorners centerText contentText" onclick="CloseGameModesModal('gameModeMenu')">X</button>
         <div id="contentFitter">
-            <div class="box mainVisualElement">1 min.</div>
-            <div class="box mainVisualElement">1 | 1</div>
-            <div class="box mainVisualElement">2 | 1</div>
-            <div class="box mainVisualElement">3 min.</div>
-            <div class="box mainVisualElement">3 | 2</div>
-            <div class="box mainVisualElement">5 min.</div>
-            <div class="box mainVisualElement">10 min.</div>
-            <div class="box mainVisualElement">15 | 10</div>
-            <div class="box mainVisualElement">30 min.</div>
+            <div class="box centerText mainVisualElement">1 min.</div>
+            <div class="box centerText mainVisualElement">1 | 1</div>
+            <div class="box centerText mainVisualElement">2 | 1</div>
+            <div class="box centerText mainVisualElement">3 min.</div>
+            <div class="box centerText mainVisualElement">3 | 2</div>
+            <div class="box centerText mainVisualElement">5 min.</div>
+            <div class="box centerText mainVisualElement">10 min.</div>
+            <div class="box centerText mainVisualElement">15 | 10</div>
+            <div class="box centerText mainVisualElement">30 min.</div>
         </div>
     </div>
 </body>
