--- a/html/board.html
+++ b/html/board.html
@@ -266,10 +266,16 @@
             </div>
         </div>
     </div>
+    <div id="winnersPopup" class="myModal">
+        <div class="myModal-content centerText">
+            <div id="winner">Winner!</div>
+        </div>
+    </div>
 </body>
-<script src="../js/startingPosition.js"></script>
-<script type="module" src="../js/promotionModalController.js"></script>
-<script src="../js/SiteContentGraber.js"></script>
+<script src="../js/hexboard/startingPosition.js"></script>
+<script type="module" src="../js/hexboard/promotionModalController.js"></script>
+<script src="../js/hexboard/SiteContentGraber.js"></script>
 <script type="module" src="../js/pieceMovement/pieceMovement.js"></script>
+<script type="module" src="../js/hexboard/singlePlayerGameManager.js"></script>
 
 </html>
